--- a/style.css
+++ b/style.css
@@ -22,3 +22,24 @@ em
 {
   font-size:20px
 }
+
+#PSCP
+{width:25%}
+
+#BEDWARS
+{width:15%}
+
+#SKYWARS
+{width:15%}
+
+#BUILDBATTLE
+{width:15%}
+
+#VIPMADEIRA
+{width:15%}
+
+#VIPOURO
+{width:15%}
+
+#VIPDIAMANTE
+{width:15%}
